# TerritoryZoo

./: .gitignore  README.md  periodic_tasks.py  pyproject.toml  requirements.txt
.history/: .env_20250130204249  .env_20250130210021  .env_20250130210024
.history/api/: pagination_20250201211549.py  pagination_20250201211554.py  pagination_20250201211558.py  pagination_20250201211606.py  pagination_20250201211611.py  pagination_20250201211622.py  pagination_20250201211626.py  pagination_20250201211627.py  pagination_20250201211633.py  pagination_20250201211639.py  pagination_20250201211644.py  pagination_20250201211646.py  pagination_20250201211653.py  pagination_20250201211655.py  pagination_20250201211712.py  pagination_20250201211715.py  pagination_20250201211719.py  pagination_20250201212524.py  pagination_20250201212526.py  pagination_20250201214320.py  pagination_20250201214328.py  pagination_20250201214330.py  serializers_20250130205613.py  serializers_20250130211427.py  urls_20250130233811.py  urls_20250130233814.py  (+194 more)
accounts/: forms.py  models.py  services.py  urls.py  utils.py  views.py
api/: pagination.py  serializers.py  urls.py  views.py
basket/: admin.py  models.py  urls.py  utils.py  views.py
catalog/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
config/: celery_app.py  settings.py  urls.py
orders/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
static/: asideFilterForBrands.js  fetchAllProducts.js  filterProducts.js  renderProductsList.js  searchStorage.js
tasks/: periodic_tasks.py  tasks.py
(+2040 files in other folders)
