[project]
name = "diploma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "dotenv>=0.9.9",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
]
